added postcss files

--- a/src/index.css
+++ b/src/index.css
@@ -1,163 +1,1 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-@import "~react-image-gallery/styles/css/image-gallery.css";
-
-*,
-*::after,
-*::before {
-    padding: 0;
-    margin: 0;
-    outline: none;
-    box-sizing: inherit;
-    /* border: 1px dotted black; */
-
-    -moz-user-select: none;
-    -webkit-user-select: none;
-    -ms-user-select: none;
-    -o-user-select: none;
-    user-select: none;
-}
-
-html {
-    height: -webkit-fill-available;
-}
-
-body {
-    box-sizing: border-box;
-    min-height: -webkit-fill-available;
-    /* transition: all 1s; */
-}
-
-a {
-    -webkit-user-drag: none; /* in order to remove the ghost drag */
-}
-
-img {
-    pointer-events: none; /* in order to remove the image ghost drag */
-}
-
-::-webkit-scrollbar {
-    display: none;
-}
-
-/* Application Title Bar Dragging */
-.app-drag {
-    -webkit-user-select: none;
-    -webkit-app-region: drag;
-}
-
-.app-drag-button {
-    -webkit-app-region: no-drag;
-}
-
-/* Contextify React */
-
-.react-contexify,
-.react-contexify__will-enter--scale {
-    border-radius: 0 !important;
-    /* box-shadow: none !important; */
-    background-color: #475569 !important;
-    padding: 0 0 1 0 !important;
-}
-
-.react-contexify__item__content {
-    color: white !important;
-    font-size: 12px;
-}
-
-/* .react-contexify__item__content:hover {
-    background-color: black !important;
-} */
-
-/* to black grandient */
-
-.gradient {
-    background: rgb(255, 255, 255);
-    background: linear-gradient(
-        -180deg,
-        rgba(255, 255, 255, 0) 0%,
-        rgba(23, 23, 23, 0) 0%,
-        rgba(255, 255, 255, 0) 0%,
-        rgba(0, 0, 0, 1) 10%,
-        rgba(0, 0, 0, 1) 100%
-    );
-}
-
-.blink {
-    display: inline-block;
-    transform: translateY(-50%);
-    height: 10px;
-    width: 10px;
-    border-radius: 50%;
-    background-color: rgb(37, 147, 66);
-    animation-name: dotfade;
-    animation-duration: 1.5s;
-    animation-iteration-count: infinite;
-}
-
-@keyframes dotfade {
-    0% {
-        background-color: rgba(33, 149, 64, 0);
-    }
-    50% {
-        background-color: #219540;
-    }
-    100% {
-        background-color: rgba(33, 149, 64, 0);
-    }
-}
-
-.rct-tree-root {
-    padding: 0 !important;
-}
-.rct-tree-items-container li {
-    background-color: #64748b;
-}
-.rct-tree-item-title-container {
-    border: 0 !important;
-}
-
-.disabled {
-    pointer-events: none;
-}
-
-.chips_input_container {
-    border: none !important;
-    padding: 0 !important;
-}
-
-.chips_wrapper {
-    display: flex !important;
-    margin: 0 !important;
-    padding: 0 !important;
-}
-
-.chips_wrapper .input_container {
-    display: none;
-}
-
-.chips_wrapper .chip {
-    font-size: 8px;
-}
-
-.remove {
-    width: 0 !important;
-}
-.remove svg {
-    display: none;
-}
-
-.image-gallery-bullets-container .image-gallery-bullet {
-    box-shadow: none;
-    border: 1px solid black;
-    border-radius: 10;
-}
-.image-gallery-bullets .image-gallery-bullet.active {
-    border: none;
-    background: black;
-}
-.image-gallery-bullets .image-gallery-bullet.active:hover {
-    border: 1px solid black;
-    background: black;
-}
+@import "./postcss/app.css";
