--- a/src/postcss/abstracts/__utility.css
+++ b/src/postcss/abstracts/__utility.css
@@ -8,6 +8,10 @@
     -webkit-app-region: no-drag;
 }
 
+.app-no-drag-container > * {
+    -webkit-app-region: no-drag;
+}
+
 .disabled {
     pointer-events: none;
 }
