--- a/src/postcss/core/__reset.css
+++ b/src/postcss/core/__reset.css
@@ -3,7 +3,8 @@
 *::before {
     padding: 0;
     margin: 0;
-    outline: none;
+    outline-color: gray;
+    /* outline: none; */
     box-sizing: inherit;
     /* border: 1px dotted black; */
 
